<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/instructionLbl"
        style="@style/InstructionLabelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/please_select_the_payment_method_to_use"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        app:cardElevation="1dp"
        app:contentPadding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/continueBtn"
        app:layout_constraintTop_toBottomOf="@+id/instructionLbl">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="4dp"
            app:layout_constraintBottom_toTopOf="@+id/continueBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructionLbl">

            <LinearLayout
                android:id="@+id/creditCardMethod"
                android:layout_width="@dimen/payment_method_width"
                android:layout_height="@dimen/payment_method_height"
                android:layout_marginRight="16dp"
                android:background="@drawable/payment_method_bg"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/payment_method_icon_size"
                    android:layout_height="@dimen/payment_method_icon_size"
                    android:contentDescription="@string/credit_card_desc"
                    app:srcCompat="@drawable/ic_credit_card" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bankMethod"
                android:layout_width="@dimen/payment_method_width"
                android:layout_height="@dimen/payment_method_height"
                android:layout_marginRight="16dp"
                android:background="@drawable/payment_method_bg"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/payment_method_icon_size"
                    android:layout_height="@dimen/payment_method_icon_size"
                    android:contentDescription="@string/credit_card_desc"
                    app:srcCompat="@drawable/ic_bank" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mobileMoneyMethod"
                android:layout_width="@dimen/payment_method_width"
                android:layout_height="@dimen/payment_method_height"
                android:background="@drawable/payment_method_bg"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/payment_method_icon_size"
                    android:layout_height="@dimen/payment_method_icon_size"
                    android:contentDescription="@string/credit_card_desc"
                    app:srcCompat="@drawable/ic_payment_method" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/continueBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/checkout_action_btn_bg"
        android:text="@string/checkout_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>